reactjs-eks-frontend/reactjs-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactjs-frontend
  namespace: workshop
  labels:
    role: reactjs-frontend
    env: demo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: reactjs-frontend
  template:
    metadata:
      labels:
        role: reactjs-frontend
    spec:
      containers:
      - name: reactjs-frontend
        image: public.ecr.aws/v8e6s9s3/three-tier-frontend:v32
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        #   initialDelaySeconds: 2
        #   periodSeconds: 5
        # readinessProbe:
        #   httpGet:
        #      path: /
        #      port: 3000
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        #   successThreshold: 1
