reactjs-eks-frontend/reactjs-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactjs-frontend-ingress
  namespace: workshop
  annotations:
    alb.ingress.kubernetes.io/group.name: demo-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
  - host: reactjs-frontend.showmysite.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reactjs-frontend-service
            port:
              number: 3000
